[gd_scene load_steps=2 format=3 uid="uid://db0ivgs28q5rr"]

[ext_resource type="Script" path="res://scenes/main_menu/settings/slider_setting.gd" id="1_0c23u"]

[node name="SliderSetting" type="HBoxContainer"]
script = ExtResource("1_0c23u")

[node name="Label" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Label"

[node name="CheckBox" type="CheckBox" parent="."]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 2
text = "50"
placeholder_text = "0"
alignment = 1

[node name="Slider" type="HSlider" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_vertical = 4
value = 50.0

[connection signal="toggled" from="CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="text_changed" from="LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="value_changed" from="Slider" to="." method="_on_slider_value_changed"]
